@@ -30,7 +30,7 @@ samples in mind (matched whole-exome data is of course supported).
 
 It can be used to supplement existing normalization and segmentation algorithms,
 i.e. the software can start from BAM files, from target-level coverage data,
-from copy number log-ratios or from already segmented data. After the correct
+from copy number log2-ratios or from already segmented data. After the correct
 purity and ploidy solution was identified, \Biocpkg{PureCN} will accurately
 classify variants as germline vs. somatic or clonal vs. sub-clonal.
 
@@ -119,7 +119,7 @@ VCFs generated in tumor-only mode is available.
 \subsection{Target information}
 \label{sectargetinfo}
 For the default segmentation function provided by \Biocpkg{PureCN}, the
-algorithm first needs to calculate log-ratios of tumor vs. normal control
+algorithm first needs to calculate log2-ratios of tumor vs. normal control
 coverage. To do this, we need to know the locations of the captured genomic
 regions (targets). These are provided by the manufacturer of your capture
 kit\footnote{While \Biocpkg{PureCN} can use a pool of normal samples to learn
@@ -287,16 +287,15 @@ vignette).
 
 \section{Pool of normals}
 
-\subsection{Selection of normals for log-ratio calculation}
+\subsection{Coverage normalization}
 \label{bestnormal}
 
-For calculating copy number log-ratios of tumor vs. normal, \Biocpkg{PureCN}
+For calculating copy number log2-ratios of tumor vs. normal, \Biocpkg{PureCN}
 requires coverage from a process-matched normal sample.  Using a normal that
 was sequenced using a similar, but not identical assay, rarely works.
-Differently covered genomic regions simply result in too many log-ratio
-outliers. This section describes how to identify good process-matched normals
-in case no matched normal is available or in case the matched normal has low or
-uneven coverage. 
+Differently covered genomic regions simply result in too many log2-ratio
+outliers. This section describes how to optimally normalize coverage against a
+pool of normals.
 
 The \Rfunction{createNormalDatabase} function builds a database of coverage
 files (a command line script providing this functionality is described in
@@ -367,11 +366,11 @@ interval.weight.file <- "interval_weights.txt"
 calculateIntervalWeights(normalDB$normal.coverage.files, interval.weight.file)
 @
 
-This function calculates copy number log-ratios using all normal
+This function calculates copy number log2-ratios using all normal
 samples provided in the \Rcode{normal.coverage.files} argument.  Assuming that
-all normal samples are in general diploid, a high variance in log-ratio
+all normal samples are in general diploid, a high variance in log2-ratio
 is indicative of an interval with either common germline alterations or frequent
-artifacts; high or low copy number log-ratios in these intervals are unlikely
+artifacts; high or low copy number log2-ratios in these intervals are unlikely
 measuring somatic copy number events.  
 
 This \Rcode{interval.weight.file} is automatically generated by the NormalDB.R
@@ -498,12 +497,12 @@ plotAbs(ret, 1, type="hist")
 \incfig{figure/figureexample2-1}{0.75\textwidth}{Log-ratio histogram.}
 
 Figure~\ref{figure/figureexample2-1} displays a histogram of tumor vs. normal
-copy number log-ratios for the maximum likelihood solution (number 1 in
+copy number log2-ratios for the maximum likelihood solution (number 1 in
 Figure~\ref{figure/figureexample1-1}). The height of a bar in this plot is
 proportional to the fraction of the genome falling into the particular
-log-ratio copy number range. The vertical dotted lines and numbers visualize
-the, for the given purity/ploidy combination, expected log-ratios for all
-integer copy numbers from 0 to 7. It can be seen that most of the log-ratios of
+log2-ratio copy number range. The vertical dotted lines and numbers visualize
+the, for the given purity/ploidy combination, expected log2-ratios for all
+integer copy numbers from 0 to 7. It can be seen that most of the log2-ratios of
 the maximum likelihood solution align well to expected values for copy numbers
 of 0, 1, 2 and 4. 
 
@@ -517,7 +516,7 @@ visualize odd and even chromosome numbers, respectively. The black lines
 visualize the expected (not the average!) allelic fractions in the segment.
 These are calculated using the estimated purity and the total and minor segment
 copy numbers. These are visualized in black and grey, respectively, in the
-second and third panel.  The second panel shows the copy number log-ratios, the
+second and third panel.  The second panel shows the copy number log2-ratios, the
 third panel the integer copy numbers.}
 
 Germline variant data are informative for calculating integer copy number
@@ -529,7 +528,7 @@ which 100\% corresponds to a perfect fit and 0\% to the worst possible fit.
 The latter is defined as a fit in which allelic fractions on average differ by
 0.2 from their expected fractions. Note that this does not take purity into
 account and low purity samples are expected to have a better fit. In the
-middle panel, the corresponding copy number log-ratios are shown. The lower
+middle panel, the corresponding copy number log2-ratios are shown. The lower
 panel displays the calculated integer copy numbers, corrected for purity and
 ploidy. We can zoom into particular chromosomes 
 (Figure~\ref{figure/figureexample3b-1}).
@@ -540,7 +539,7 @@ plotAbs(ret, 1, type="BAF", chr="chr19")
 \incfig{figure/figureexample3b-1}{0.95\textwidth}{Chromosome plot.}{Similar
     to Figure~\ref{figure/figureexample3-1}, but zoomed into a particular 
     chromosome. The grey dots in the middle panel visualize copy number 
-    log-ratios of targets without heterozygous SNPs, which are omitted from the 
+    log2-ratios of targets without heterozygous SNPs, which are omitted from the 
     previous genome-wide plot. The x-axis now indicates genomic coordinates in
     kbps.}
 
@@ -671,7 +670,7 @@ unreliable, either due to low posterior probability (< 0.5) or few variants (<
 \Rcode{CELLFRACTION} & Fraction of tumor cells harboring the somatic mutation\\
 \Rcode{FLAGGED} & Flag indicating that call is unreliable 
     (currently only due to high mapping bias and high pool of normal counts)\\
-\Rcode{log.ratio} & The copy number log-ratio (tumor vs. normal) for this 
+\Rcode{log.ratio} & The copy number log2-ratio (tumor vs. normal) for this 
     variant \\
 \Rcode{depth} & The total sequencing depth at this position \\
 \Rcode{prior.somatic} & Prior probability of variant being somatic \\
@@ -694,7 +693,7 @@ amplifications and a cutoff of 7 otherwise. For homozygous deletions, a cutoff
 of 0.5 is useful to allow some heterogeneity in copy number.
 
 For samples that failed \Biocpkg{PureCN} calling we recommended using
-common log-ratio cutoffs to call amplifications, for example 0.9.
+common log2-ratio cutoffs to call amplifications, for example 0.9.
 
 This strategy is implemented in the \Rfunction{callAlterations} function:
 
@@ -718,11 +717,11 @@ Column name       & Description \\
 \midrule
 \Rcode{chr, start, end} & Gene coordinates \\
 \Rcode{C}            & Segment integer copy number \\
-\Rcode{seg.mean}     & Segment mean of copy number log-ratios 
+\Rcode{seg.mean}     & Segment mean of copy number log2-ratios 
 (not adjusted for purity/ploidy)  \\
 \Rcode{seg.id}       & Segment id  \\
 \Rcode{number.targets} & Number of targets annotated with this symbol \\
-\Rcode{gene.*}       & Gene copy number log-ratios  
+\Rcode{gene.*}       & Gene copy number log2-ratios  
 (not adjusted for purity/ploidy)  \\
 \Rcode{focal}       & \Rcode{TRUE} for focal amplification, as defined by the 
 \Rfunction{fun.focal} argument in \Rfunction{runAbsoluteCN} \\
@@ -765,6 +764,17 @@ Column name & Description \\
 \Rcode{C}           & Segment integer copy number \\
 \Rcode{M}           & Minor integer copy number ($M+N=C,M\leq N$) \\
 \Rcode{type}        & LOH type if $M=0$ \\
+\Rcode{seg.mean}    & Segment mean of copy number log2-ratios 
+(not adjusted for purity/ploidy)  \\
+\Rcode{num.mark} & Number of intervals in this segment (following DNAcopy
+    naming convention) \\
+\Rcode{num.snps.segment} & Number of SNPs in this segment informative for 
+    LOH detection \\
+\Rcode{M.flagged} & flag indicating that \Rcode{M} is unreliable \\
+\Rcode{maf.expected} & Expected minor allele frequency of heterozygous SNPs
+    in this segment \\
+\Rcode{maf.seg} & Median of observed minor allele frequency of heterozygous
+    SNPs in this segment \\
 \bottomrule
 \end{tabular}
 \label{tbl:callLOH}
@@ -876,7 +886,7 @@ Copy number normalization and segmentation are crucial for obtaining good
 purity and ploidy estimates. If you have a well-tested pipeline that produces
 clean results for your data, you might want to use \Biocpkg{PureCN} as add-on
 to your pipeline. By default, we will use \CRANpkg{DNAcopy}
-\cite{Venkatraman2007} to segment normalized target-level coverage log-ratios.
+\cite{Venkatraman2007} to segment normalized target-level coverage log2-ratios.
 It is straightforward to replace the default with other methods and the
 \Rfunction{segmentationCBS} function can serve as an example.
 
@@ -889,8 +899,8 @@ It is possible to provide already segmented data, which is especially
 recommended when matched SNP6 data are available or when third-party
 segmentation tools are not written in R. Otherwise it is usually however better
 to customize the default segmentation function, since the algorithm then has
-access to the raw log-ratio distribution\footnote{If the third-party tool
-provides target-level log-ratios, then these can be provided via the
+access to the raw log2-ratio distribution\footnote{If the third-party tool
+provides target-level log2-ratios, then these can be provided via the
 \Rcode{log.ratio} argument in addition to \Rcode{seg.file} though. See also
 Section~\ref{customnorm}.}. The expected file format for already segmented copy
 number data is\footnote{This segmentation file can contain multiple samples, in
@@ -904,18 +914,18 @@ which case the provided \Rcode{sampleid} must match a sample in the column
 \end{verbatim}
 
 Since its likelihood model is exon-based, \Biocpkg{PureCN} currently still
-requires an interval file to generate simulated target-level log-ratios from a
+requires an interval file to generate simulated target-level log2-ratios from a
 segmentation file.  For simplicity, this interval file is expected either via
 the \Rcode{tumor.coverage.file} or via the \Rcode{interval.file} argument (see
 Figure~\ref{figure/figurecustombaf-1}). Note that \Biocpkg{PureCN} will
-re-segment the simulated log-ratios using the default
+re-segment the simulated log2-ratios using the default
 \Rfunction{segmentationCBS} function, in particular to identify regions of
 copy-number neutral LOH and to cluster segments with similar allelic imbalance
-and log-ratio. The provided interval file should therefore cover all
+and log2-ratio. The provided interval file should therefore cover all
 significant copy number alterations\footnote{If this behaviour is not wanted,
 because maybe the custom function already identifies CNNLOH reliably,
 \Rfunction{segmentationCBS} can be replaced with a minimal version.}. Please
-check that the log-ratios are similar to the ones obtained by the default
+check that the log2-ratios are similar to the ones obtained by the default
 \Biocpkg{PureCN} segmentation and normalization.
 
 <<customseg>>=
@@ -935,18 +945,18 @@ plotAbs(retSegmented, 1, type="BAF")
 \incfig{figure/figurecustombaf-1}{0.95\textwidth}{B-allele frequency plot for
 segmented data.}{This plot shows the maximum likelihood solution for an example
 where segmented data are provided instead of coverage data. Note that the middle
-panel shows no variance in log-ratios, since only segment-level log-ratios are
+panel shows no variance in log2-ratios, since only segment-level log2-ratios are
 available.}
   
 \subsubsection{Custom normalization}
 \label{customnorm}
 If third-party tools such as \software{GATK4} are used to calculate
-target-level copy number log-ratios, and \Biocpkg{PureCN} should be used for
+target-level copy number log2-ratios, and \Biocpkg{PureCN} should be used for
 segmentation and purity/ploidy inference only, it is possible to provide these
-log-ratios:
+log2-ratios:
 
 <<customlogratio, message=FALSE>>=
-# We still use the log-ratio exactly as normalized by PureCN for this
+# We still use the log2-ratio exactly as normalized by PureCN for this
 # example
 log.ratio <- calculateLogRatio(readCoverageFile(normal.coverage.file),
     readCoverageFile(tumor.coverage.file))
@@ -960,8 +970,8 @@ retLogRatio <- runAbsoluteCN(log.ratio=log.ratio,
 
 Again, the \Rcode{max.candidate.solutions} and \Rcode{test.purity} arguments
 are set to non-default values to reduce the runtime of this vignette. It is
-highly recommended to compare the log-ratios obtained by \Biocpkg{PureCN} and
-the third-party tool, since some pipelines automatically adjust log-ratios for
+highly recommended to compare the log2-ratios obtained by \Biocpkg{PureCN} and
+the third-party tool, since some pipelines automatically adjust log2-ratios for
 a default purity value. Note that this example uses a pool of normals to filter
 low quality targets. Interval coordinates are again expected in either a
 \Rcode{interval.file} or a \Rcode{tumor.coverage.file}. If a tumor coverage file is
@@ -1247,8 +1257,8 @@ complaints, etc. please do not hesitate to send us an email.
     \item Read the output of \Rfunction{runAbsoluteCN} with
         \Rcode{verbose=TRUE}, fixed all warnings.
     \item If third-party segmentation tools are used, checked that normalized
-    log-ratios are not biased, i.e. very similar compared to \Biocpkg{PureCN}
-    log-ratios (some pipelines already adjust for a default normal 
+    log2-ratios are not biased, i.e. very similar compared to \Biocpkg{PureCN}
+    log2-ratios (some pipelines already adjust for a default normal 
     contamination).
 \end{itemize}
 
@@ -1257,17 +1267,17 @@ complaints, etc. please do not hesitate to send us an email.
 \paragraph{If the ploidy is frequently too high, please check:}
 
 \begin{itemize}
-    \item Does the log-ratio histogram (Figure~\ref{figure/figureexample2-1})
+    \item Does the log2-ratio histogram (Figure~\ref{figure/figureexample2-1})
 look noisy? If yes, then
     \begin{itemize}
     \item Is the coverage sufficient? Tumor coverages below 80X can be
 difficult, especially in low purity samples. Normal coverages below 50X might
-result in high variance of log-ratios. See Section~\ref{bestnormal} for finding
-a good normal sample for log-ratio calculation.
+result in high variance of log2-ratios. See Section~\ref{bestnormal} for finding
+a good normal sample for log2-ratio calculation.
     \item Is the coverage data of both tumor and normal GC-normalized? If not, 
     see \Rfunction{correctCoverageBias}.
     \item Is the quality of both tumor and normal sufficient? A high AT or
-GC-dropout might result in high variance of log-ratios. Challenging FFPE samples
+GC-dropout might result in high variance of log2-ratios. Challenging FFPE samples
 also might need parameter tuning of the segmentation function. See 
 \Rfunction{segmentationCBS}. A high expected tumor purity allows more aggressive
 segmentation parameters, such as \Rcode{prune.hclust.h=0.2} or higher.
@@ -1282,7 +1292,7 @@ segmentation parameters, such as \Rcode{prune.hclust.h=0.2} or higher.
     section~\ref{customseg}, since our default is optimized for targeted
     sequencing.
     \end{itemize}
-    \item Otherwise, if log-ratio peaks are clean as in 
+    \item Otherwise, if log2-ratio peaks are clean as in 
 Figure~\ref{figure/figureexample2-1}:
     \begin{itemize}
         \item Was MuTect run without a matched normal? If yes, then make sure
